<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.PageFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/loading_iv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_300"
        android:background="@drawable/timg"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/load_scaled_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_10"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/load_clip_iv"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_300"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_10"/>

    <RadioGroup
        android:id="@+id/page_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_10">

        <RadioButton
            android:id="@+id/not_scale_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_scale"
            android:checked="true"
            android:layout_gravity="center_vertical"/>

        <RadioButton
            android:id="@+id/a_half_scale_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_half_scale"
            android:layout_gravity="center_vertical"/>

        <RadioButton
            android:id="@+id/quarter_scale_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quarter_scale"
            android:layout_gravity="center_vertical"/>

        <RadioButton
            android:id="@+id/clip_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clip_image"
            android:layout_gravity="center_vertical"/>
    </RadioGroup>

    <com.example.viewpager2demo.defineview.CommonShapeButton
        android:id="@+id/load_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/loading_image"
        app:csb_pressedColor="@android:color/holo_green_light"
        app:csb_fillColor="@android:color/holo_green_dark"
        app:csb_cornerRadius="@dimen/dp_10"
        app:csb_activeEnable="true"/>

</androidx.appcompat.widget.LinearLayoutCompat>