<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabMaxWidth="0dp"
        app:tabBackground="@android:color/holo_green_light"
        app:tabRippleColor="@android:color/transparent"
        app:tabTextColor="@android:color/holo_red_light"
        app:tabSelectedTextColor="@android:color/holo_red_dark"
        app:tabIndicator="@null">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Tab_Item_Text_Style"
            android:text="@string/home"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Tab_Item_Text_Style"
            android:text="@string/page"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Tab_Item_Text_Style"
            android:text="@string/find"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Tab_Item_Text_Style"
            android:text="@string/others"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</androidx.appcompat.widget.LinearLayoutCompat>